# c-opengl-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  game  run
.cache/clangd/index/: batch.c.A321C7201EE714F8.idx  camera.c.ED11566AE1CF565F.idx  camera.h.9FF0EA9833FEEA4D.idx  glad.c.7E48B5D8F0233C2E.idx  glad.h.7C0A6A3510919E99.idx  glfw3.h.9AA8D1131C3FD9AB.idx  ivec2.c.7F48A775253D8250.idx  ivec2.h.B3A67C804794B313.idx  khrplatform.h.B8C4A3B54DF117D1.idx  libs.h.AA8C9D64137254B1.idx  main.c.E0D57DF51DBB68BB.idx  mat4.c.3F112528A8376AB4.idx  mat4.h.4B49EBCBD89B0236.idx  renderer.c.BBC943C921972130.idx  renderer.h.5A9502465420C56E.idx  shader.c.103C490434F9B302.idx  shader.h.B6F057DD354222E4.idx  types.h.DA5E7550FFDCDB43.idx  util.c.456FD05FE4E69419.idx  util.h.395539FCA6A2996A.idx  vao.c.42B7BF633C3FE201.idx  vao.h.6BF9252FEDB052C1.idx  vbo.c.B639BD0095151149.idx  vbo.h.F06FDDDB566C42A2.idx  vec2.c.A80F8926608A9450.idx  vec2.h.1709DD81491F2324.idx  window.c.344EB75758290107.idx  window.h.24DEF6C913388924.idx
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: basic.fs  basic.vs
src/: da.h  main.c  types.h  util.c  util.h
src/gfx/: batch.h  camera.c  camera.h  renderer.c  renderer.h  shader.c  shader.h  vao.c  vao.h  vbo.c  vbo.h  window.c  window.h
src/math/: ivec2.c  ivec2.h  mat4.c  mat4.h  math.h  vec2.c  vec2.h
